--- a/app/assets/stylesheets/application/quizzes/_overview.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_overview.css.sass
@@ -14,3 +14,8 @@
     margin: 20px 0 30px 0
     [class*="span"]
       margin-left: 0
+
+  .dial-wrapper
+    canvas
+      +border-radius(100px)
+      background: $white
