add option view and deal with question options

--- a/app/assets/stylesheets/admin/_quiz.css.sass
+++ b/app/assets/stylesheets/admin/_quiz.css.sass
@@ -35,6 +35,9 @@ ul#question-list
     h3
       float: left
       clear: both
+    .add-option
+      float: left
+      clear: both
 
   .actions
     float: right
