add dial label + style tweaks

--- a/app/views/quizzes/show.html.haml
+++ b/app/views/quizzes/show.html.haml
@@ -15,8 +15,8 @@
       .span8
         = image_tag 'http://lorempixel.com/745/376/food/', class: 'img-polaroid'
       .span4
-        = progress_dial 0, 20
-        = progress_dial 5, 15
+        = progress_dial 0, 20, 'questions'
+        = progress_dial 5, 15, 'est. min.'
     .row
       .span12
         %p.pull-left
