--- a/app/assets/stylesheets/application/quizzes/_overview.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_overview.css.sass
@@ -16,6 +16,26 @@
       margin-left: 0
 
   .dial-wrapper
+    display: none
+    float: left
+    height: 180px
+    position: relative
+
     canvas
       +border-radius(100px)
       background: $white
+
+    .dial-text
+      +font-sans-small
+      font-weight: bold
+      color: $brick
+      position: absolute
+      top: 52px
+      left: 40px
+      line-height: 50px
+      text-align: center
+      text-transform: uppercase
+
+      strong
+        display: block
+        font-size: 85px
