Put Delve back in; looked too floaty other way. Repositioned slightly.

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -10,6 +10,10 @@
         .nav.brand-container
           %a.brand{href: root_url, target: '_top'}
             = image_tag('chefsteps-logo.png', alt: 'ChefSteps')
+          .brand-byline
+            brought to you by
+            %a.delve-brand{href: 'http://delvekitchen.com', target: '_top'}
+              = image_tag('delve-logo.png', alt: 'Delve')
         %ul.nav.pull-right
           = render 'layouts/global_navigation'
 
