--- a/app/views/quizzes/show.html.haml
+++ b/app/views/quizzes/show.html.haml
@@ -15,8 +15,10 @@
       .span8
         = image_tag 'http://lorempixel.com/745/376/food/', class: 'img-polaroid'
       .span4
-        = progress_dial 0, 20, 'questions'
-        = progress_dial 5, 15, 'est. min.'
+        .pull-left
+          = progress_dial 0, 20, 'questions'
+        .pull-right
+          = progress_dial 5, 15, 'est. min.'
     .row
       .span12
         %p.pull-left
