center text better

--- a/app/assets/stylesheets/application/_dials.css.sass
+++ b/app/assets/stylesheets/application/_dials.css.sass
@@ -14,7 +14,8 @@
     color: $brick
     position: absolute
     top: 52px
-    left: 44px
+    left: 0
+    right: 0
     line-height: 50px
     text-align: center
     text-transform: uppercase
