--- a/app/views/quizzes/show.html.haml
+++ b/app/views/quizzes/show.html.haml
@@ -18,7 +18,7 @@
         .pull-left
           = progress_dial 0, quiz.question_count, 'questions'
         .pull-right
-          = progress_dial 5, 15, 'est. min.'
+          = progress_dial 0, estimated_time(quiz), 'est. min.'
     .row
       .span12
         %p.pull-left
