--- a/spec/javascripts/fixtures/progress_dial.html.haml
+++ b/spec/javascripts/fixtures/progress_dial.html.haml
@@ -1,2 +1,2 @@
-= content_tag :div, class: 'dial-wrapper' do
+= content_tag :div, data: {behavior: 'progress-dial'} do
   = text_field_tag :dial, 0, class: 'dial', data: {max: 20}
