--- a/app/assets/stylesheets/application/quizzes/_overview.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_overview.css.sass
@@ -15,5 +15,17 @@
     [class*="span"]
       margin-left: 0
 
+    .dials
+      margin-left: 10px
+      margin-top: 90px
+
+  .dial-left
+    width: 50%
+    float: left
+
+  .dial-right
+    width: 50%
+    float: right
+
   .dial-wrapper
-    margin-top: 92px
+    margin: 0 auto
