add gray box around question and options

--- a/app/assets/stylesheets/admin/_quiz.css.sass
+++ b/app/assets/stylesheets/admin/_quiz.css.sass
@@ -33,13 +33,20 @@ ul#question-list
       padding: 5px
       width: 97%
       margin-top: 5px
-    h3
+    h3, h4
       float: left
+      margin-bottom: 0
       clear: both
+    .question-box
+      width: 96%
+      border: 1px solid $grayLight
+      background: whiteSmoke
+      padding: 10px
+      float: left
+      margin-top: 5px
 
   .actions
     float: right
-
 
   .edit-option
     list-style-type: none
