--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -118,7 +118,7 @@
     :erb
       <script type="text/javascript">var switchTo5x=false;</script>
 
-  %body
+  %body{ data: body_data }
 
     -# ==========================================================================
     -# Content
