--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,19 +1,20 @@
-.container
-  .navbar
-    .navbar-inner
-      .nav.pull-right.addthis-container
-        = render 'layouts/share_this'
-.container.global-navigation
-  .navbar
-    .navbar-inner
-      .container
-        .nav.brand-container
-          %a.brand{href: root_url, target: '_top'}
-            = image_tag('chefsteps-logo.png', alt: 'ChefSteps')
-          .brand-byline
-            brought to you by
-            %a.delve-brand{href: 'http://delvekitchen.com', target: '_top'}
-              = image_tag('delve-logo.png', alt: 'Delve')
-        %ul.nav.pull-right
-          = render 'layouts/global_navigation'
+#header
+  .container
+    .navbar
+      .navbar-inner
+        .nav.pull-right.addthis-container
+          = render 'layouts/share_this'
+  .container.global-navigation
+    .navbar
+      .navbar-inner
+        .container
+          .nav.brand-container
+            %a.brand{href: root_url, target: '_top'}
+              = image_tag('chefsteps-logo.png', alt: 'ChefSteps')
+            .brand-byline
+              brought to you by
+              %a.delve-brand{href: 'http://delvekitchen.com', target: '_top'}
+                = image_tag('delve-logo.png', alt: 'Delve')
+          %ul.nav.pull-right
+            = render 'layouts/global_navigation'
 
