rename quiz-overview id to quiz-container

--- a/app/assets/stylesheets/application/quizzes/_overview.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_overview.css.sass
@@ -1,9 +1,8 @@
 .quiz-title
   +font-serif-large
 
-#quiz-overview
-  .container
-    min-height: 610px
+#quiz-container
+  min-height: 610px
 
   p
     +font-serif-huge
