--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -30,7 +30,7 @@
     display: none
 
 @media (max-width: 979px) and (min-width: 768px)
-  #quiz-overview
+  #quiz-container
     .hero-unit .dials
       margin-top: 0
 
@@ -102,7 +102,7 @@
     h1
       font-size: 26px
 
-  #quiz-overview
+  #quiz-container
     .hero-unit .dials
       margin-left: 0
       margin-top: 0
@@ -228,7 +228,7 @@
   .nav-tabs > li > a
     font-size: 9px
 
-  #quiz-overview
+  #quiz-container
     .dial-wrapper
       margin: 0
 
