connect start button to hide behavior

--- a/app/views/quizzes/show.html.haml
+++ b/app/views/quizzes/show.html.haml
@@ -25,5 +25,5 @@
       %p.pull-left
         Lorem ipsum Quiz Start Text
       .pull-right
-        .btn-uppercase.btn-primary.btn-x-large Start Quiz
+        #start-quiz.btn-uppercase.btn-primary.btn-x-large Start Quiz
 
