bootstrap quiz question data in show view

--- a/app/views/quizzes/show.html.haml
+++ b/app/views/quizzes/show.html.haml
@@ -1,3 +1,7 @@
+:javascript
+  window.ChefSteps = window.ChefStepsAdmin || {};
+  window.ChefSteps.questionsData = JSON.parse('#{j(questions)}');
+
 - add_body_data(behavior: 'nav-hideable')
 
 .hero-unit.quiz-title
