--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -25,6 +25,7 @@
 @import application/activities/step_by_step
 @import application/activities/quizzes
 @import application/quizzes/overview
+@import application/quizzes/question
 @import application/user_profiles/show
 
 @import application/users/forms
