hook start copy up to quizzes user view

--- a/app/views/quizzes/show.html.haml
+++ b/app/views/quizzes/show.html.haml
@@ -22,8 +22,7 @@
         = progress_dial 0, estimated_time(quiz), 'est. min.'
   .row
     .span12
-      %p.pull-left
-        Lorem ipsum Quiz Start Text
+      %p.pull-left= quiz.start_copy
       .pull-right
         #start-quiz.btn-uppercase.btn-primary.btn-x-large Start Quiz
 
