move specialized style under specific class
.hero-unit also is used in the question, so we don't want the odd
padding workarounds to apply

--- a/app/views/quizzes/show.html.haml
+++ b/app/views/quizzes/show.html.haml
@@ -16,7 +16,7 @@
       %h3
         Test your skills on
         %strong #{quiz.title}!
-  .row.hero-unit
+  .row.hero-unit.overview
     .span8
       = image_tag 'http://lorempixel.com/745/376/food/', class: 'img-polaroid'
     .span4.dials
