--- a/app/assets/stylesheets/application/quizzes/_overview.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_overview.css.sass
@@ -9,7 +9,9 @@
     margin-top: 0
 
   .hero-unit
-    background: whiteSmoke
+    background: $grayLighter
+
+  .overview
     margin: 20px 0 30px 0
     [class*="span"]
       margin-left: 0
