add sorting to question options

--- a/app/assets/stylesheets/admin/_quiz.css.sass
+++ b/app/assets/stylesheets/admin/_quiz.css.sass
@@ -71,6 +71,8 @@ ul#question-list
       top: 5px
     &.correct
       background: lighten($green, 40%)
+    &:hover
+      border: 1px dashed $black
 
   .options
     margin-top: 5px
