partially style multi choice question
still need to style answers and next button

--- a/app/assets/stylesheets/application/quizzes/_question.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_question.css.sass
@@ -9,3 +9,27 @@
   &.visible
     margin-left: 0
     opacity: 1
+
+  .instructions
+    +font-serif-medium
+    margin-bottom: 20px
+
+  .hero-unit
+    +border-radius(3px)
+    background: $grayLighter
+    color: $black
+    border: 1px solid $grayMedium
+    padding: 30px
+
+  .question-label
+    +font-sans-tiny
+    color: $grayMedium
+    font-weight: 500
+    text-transform: uppercase
+    text-align: center
+    margin: 10px 0
+
+  .question-text
+    +font-serif-huge
+    text-align: center
+    margin-bottom: 20px
