--- a/app/views/devise/registrations/complete_registration.html.haml
+++ b/app/views/devise/registrations/complete_registration.html.haml
@@ -15,7 +15,7 @@
                         remote: true) do |f|
       .welcome
         - if uid
-          %img{src: facebook_image_url(uid)}
+          %img{src: UserPresenter.facebook_image_url(uid)}
         %p Welcome, #{name}
         %p.last
           Please review your information below and agree
