fix font-size for facebook button

--- a/app/assets/stylesheets/application/_base.css.sass
+++ b/app/assets/stylesheets/application/_base.css.sass
@@ -212,10 +212,11 @@ iframe
   +border-radius(3px)
 
 .btn-facebook
-  &.btn-large
   +buttonBackground($btnFacebookBackground, $btnFacebookBackgroundHighlight)
   position: relative
   padding-left: 47px
+  font-size: 19px
+
   &:before
     $fb-logo: 'facebook-logo.png'
     position: absolute
