stick admin button to top

--- a/app/assets/stylesheets/admin/_quiz.css.sass
+++ b/app/assets/stylesheets/admin/_quiz.css.sass
@@ -1,6 +1,12 @@
 #quiz-controls
   float: left
   margin-right: 40px
+  &.stuck-to-top
+    position: fixed
+    top: 10px
+
+#quiz-control-anchor
+  float: left
 
 #quiz-questions
   float: left
