don't include addthis toolbar in test env

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -3,7 +3,7 @@
     .navbar
       .navbar-inner
         .nav.pull-right.addthis-container
-          = render 'layouts/share_this'
+          = render 'layouts/share_this' unless Rails.env.test?
   .container.global-navigation
     .navbar
       .navbar-inner
