add private/published link support to quizzes

--- a/app/views/admin/quizzes/_form.html.haml
+++ b/app/views/admin/quizzes/_form.html.haml
@@ -2,6 +2,7 @@
 
 = semantic_form_for [:admin, @quiz] do |f|
   = f.inputs name: "Quiz Details" do
+    = f.input :published
     = f.input :title
     = f.input :activity
     = f.input :start_copy
