rename publish link helper

--- a/app/views/admin/activities/_show.html.haml
+++ b/app/views/admin/activities/_show.html.haml
@@ -9,7 +9,7 @@
             %td= activity.published
           %tr
             %th Link
-            %td= published_model_link(activity)
+            %td= link_to_publishable(activity)
           %tr
             %th Title
             %td= activity.title
