add question count to manage questions

--- a/app/assets/stylesheets/admin/_quiz.css.sass
+++ b/app/assets/stylesheets/admin/_quiz.css.sass
@@ -11,6 +11,11 @@
 #quiz-questions
   float: left
 
+#question-count
+  font-weight: bold
+  font-size: 22px
+  margin-left: 20px
+
 ul#question-list
   width: 600px
   list-style-type: none
