--- a/app/views/admin/quizzes/manage_questions.html.haml
+++ b/app/views/admin/quizzes/manage_questions.html.haml
@@ -9,5 +9,6 @@
   = admin_button 'Add Multiple Choice Question', '#', id: 'add-multiple-choice-question'
 
 #quiz-questions
+  %span#question-count
   %ul#question-list
 
