add beige color

--- a/app/assets/stylesheets/styleguide.css.sass
+++ b/app/assets/stylesheets/styleguide.css.sass
@@ -51,6 +51,9 @@
   &.brickDark
     +styleguide-swatch($brickDark)
     color: $white
+  &.beige
+    +styleguide-swatch($beige)
+    color: $white
   &.gray
     +styleguide-swatch($gray)
     color: $white
