--- a/app/assets/stylesheets/_bootstrap_config.scss
+++ b/app/assets/stylesheets/_bootstrap_config.scss
@@ -32,6 +32,7 @@ $purple:                #7a43b6;
 $brick:                 #aa4311;
 $brickLight:            #FFBC99;
 $brickDark:             #803B0C;
+$beige:                 #c9bca6;
 
 // Scaffolding
 // -------------------------
