Hardcode copy and use span for count

--- a/app/views/admin/quizzes/manage_questions.html.haml
+++ b/app/views/admin/quizzes/manage_questions.html.haml
@@ -9,6 +9,8 @@
   = admin_button 'Add Multiple Choice Question', '#', id: 'add-multiple-choice-question'
 
 #quiz-questions
-  %span#question-count
+  #question-count
+    Question Count:
+    %span
   %ul#question-list
 
