add styled checkboxes to styleguide
still no js interaction

--- a/app/assets/stylesheets/styleguide.css.sass
+++ b/app/assets/stylesheets/styleguide.css.sass
@@ -86,3 +86,8 @@
 .styleguide-dark-background
   background: $black !important
 
+#checkboxes
+  border: 1px solid $grayLight
+  +border-radius(3px)
+  background: whiteSmoke
+  padding: 40px
