--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -14,6 +14,7 @@
 @import application/carousel
 @import application/subscribe
 @import application/images
+@import application/checkboxes
 @import application/dials
 @import application/home
 @import application/title_bar
