add sections for checkboxes and radio groups

--- a/app/assets/stylesheets/application/_checkboxes.css.sass
+++ b/app/assets/stylesheets/application/_checkboxes.css.sass
@@ -1,6 +1,6 @@
 @import compass/css3/images
 
-[data-behavior~=checkbox]
+[data-behavior~=checkbox], [data-behavior~=radio]
   border: 1px solid transparent
   padding: 5px 7px 0 45px
   position: relative
