hook up toggle order button

--- a/app/views/admin/quizzes/manage_questions.html.haml
+++ b/app/views/admin/quizzes/manage_questions.html.haml
@@ -9,6 +9,8 @@
   = admin_button 'Add Multiple Choice Question', '#', id: 'add-multiple-choice-question'
 
 #quiz-questions
+  #question-filters
+    %button.admin-button.ordering{ data: {toggle: 'active'}} Ordering
   #question-count
     Question Count:
     %span
