--- a/app/views/styleguide/_checkboxes.html.haml
+++ b/app/views/styleguide/_checkboxes.html.haml
@@ -6,20 +6,20 @@
   .row
     .span4
       %li{ data: {behavior: 'checkbox'} }
-        = check_box_tag 'check-1', 'val1', true
-        %label{ for: "check-1" } Checkbox 1. This is an example of the ChefSteps styled checkbox.
+        = check_box_tag 'check-1', 'check-1', true
+        %label Checkbox 1. This is an example of the ChefSteps styled checkbox.
     .span4
       %li{ data: {behavior: 'checkbox'} }
-        = check_box_tag 'check-2', 'val2', false
-        %label{ for: "val-2" } Checkbox 2. You can select multiple.
+        = check_box_tag 'check-2', 'check-2', false
+        %label Checkbox 2. You can select multiple.
 
   %h4 Radio Group
   .row
     .span4
       %li{ data: {behavior: 'radio'} }
         = radio_button_tag 'radio', 'val1', false, id: 'val-1'
-        %label{ for: "val-1" } Radio 1. This is an example of the ChefSteps styled radio button.
+        %label Radio 1. This is an example of the ChefSteps styled radio button.
     .span4
       %li{ data: {behavior: 'radio'} }
         = radio_button_tag 'radio', 'val2', true, id: 'val-2'
-        %label{ for: "val-2" } Radio 2. You can only select one.
+        %label Radio 2. You can only select one.
