Checkbox is there on main form; needs to be there on FB completion, and needs to actually control email signup. Unit test?

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -14,5 +14,8 @@
       .terms-of-service
         = check_box_tag 'terms-registration', true, false, required: true, class: 'terms'
         = label_tag 'terms-registration', "I accept the #{link_to "Terms of Service", terms_of_service_path, target: '_blank'}".html_safe
+      .ok-to-email
+        = check_box_tag 'ok-to-email', true, true, class: 'ok-to-email'
+        = label_tag 'ok-to-email', "Please email me the latest updates from ChefSteps".html_safe
       = f.submit "Sign Up", disable_with: 'Submitting&hellip;'.html_safe, disabled: true
 
