--- a/app/assets/stylesheets/application/users/_forms.css.sass
+++ b/app/assets/stylesheets/application/users/_forms.css.sass
@@ -74,18 +74,20 @@
       text-align: center
       line-height: 18px
 
-  .terms-of-service
+  .terms-of-service, .ok-to-email
     padding-left: 160px
     margin-top: 15px
     input
       margin: 0
       width: 15px
       height: 15px
+      vertical-align: top
     label
       +font-sans-medium
       text-align: left
       margin: 0
       width: 250px
+      vertical-align: top
 
   .forgot-password
     +font-sans-small
