--- a/app/views/styleguide/_buttons.html.haml
+++ b/app/views/styleguide/_buttons.html.haml
@@ -39,3 +39,9 @@
       .inner Stiched Inverse
   .span2
     .btn-uppercase.btn-primary Uppercase
+  .span2
+    .btn.btn-primary.btn-prev
+      %i.icon-double-chevron-left
+  .span2
+    .btn.btn-primary.btn-next
+      %i.icon-double-chevron-right
