--- a/app/assets/stylesheets/active_admin.css.sass
+++ b/app/assets/stylesheets/active_admin.css.sass
@@ -88,3 +88,15 @@ body.admin_namespace
   #activity_published_input label
     font-size: 20px
 
+body.admin_namespace button.admin-button.active
+  background: #f3f3f3
+  background: -webkit-gradient(linear, left top, left bottom, from(#f3f3f3), to(#d8d8d8))
+  background: -moz-linear-gradient(-90deg, #f3f3f3, #d8d8d8)
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f3f3f3', endColorstr='#d8d8d8')
+  -ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f3f3f3', endColorstr='#d8d8d8')
+  &:hover
+    background: #f3f3f3
+    background: -webkit-gradient(linear, left top, left bottom, from(#f3f3f3), to(#d8d8d8))
+    background: -moz-linear-gradient(-90deg, #f3f3f3, #d8d8d8)
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f3f3f3', endColorstr='#d8d8d8')
+    -ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#f3f3f3', endColorstr='#d8d8d8')
