--- a/app/assets/stylesheets/admin/_quiz.css.sass
+++ b/app/assets/stylesheets/admin/_quiz.css.sass
@@ -29,7 +29,7 @@ ol#question-list
     content: counter(li) "."
     counter-increment: li
     position: absolute
-    left: -25px
+    left: -32px
     top: 20px
     text-align: center
     font-weight: bold
@@ -67,6 +67,7 @@ ol#question-list
     h3, h4
       float: left
       margin-bottom: 0
+    h4
       clear: both
     .question-box
       width: 96%
@@ -87,6 +88,7 @@ ol#question-list
     float: left
     padding: 5px
     background: whitesmoke
+    border: 1px dashed transparent
     input[type=text]
       display: block
     label
