--- a/app/assets/stylesheets/application/quizzes/_question.css.sass
+++ b/app/assets/stylesheets/application/quizzes/_question.css.sass
@@ -5,6 +5,7 @@
   +transition-duration(1.0s)
   margin-left: 110%
   opacity: 0
+  position: relative
 
   &.visible
     margin-left: 0
@@ -20,6 +21,7 @@
     color: $black
     border: 1px solid $grayMedium
     padding: 30px
+    margin-right: 60px
 
   .question-label
     +font-sans-tiny
@@ -33,3 +35,8 @@
     +font-serif-huge
     text-align: center
     margin-bottom: 20px
+
+  a
+    position: absolute
+    top: 42%
+    right: 10px
