adjust style for question count and order button

--- a/app/assets/stylesheets/admin/_quiz.css.sass
+++ b/app/assets/stylesheets/admin/_quiz.css.sass
@@ -12,12 +12,15 @@
   float: left
 
 #question-filters
-  float: right
+  width: 104%
+  .ordering
+    float: right
 
 #question-count
   font-weight: bold
   font-size: 22px
-  margin-left: 20px
+  text-align: center
+  margin-top: 10px
 
 ol#question-list
   width: 600px
