fix numbering to work with 2 digit numbers

--- a/app/assets/stylesheets/admin/_quiz.css.sass
+++ b/app/assets/stylesheets/admin/_quiz.css.sass
@@ -32,12 +32,13 @@ ol#question-list
     content: counter(li) "."
     counter-increment: li
     position: absolute
-    left: -32px
+    left: -60px
     top: 20px
-    text-align: center
+    text-align: right
     font-weight: bold
     font-family: Helvetica, Arial, sans-serif
     font-size: 24px
+    width: 2em
 
 #question-list
   .question
