update question count style

--- a/app/assets/stylesheets/admin/_quiz.css.sass
+++ b/app/assets/stylesheets/admin/_quiz.css.sass
@@ -17,10 +17,20 @@
     float: right
 
 #question-count
-  font-weight: bold
-  font-size: 22px
+  float: left
+  position: relative
+  top: 10px
+  left: 16%
+  background: whiteSmoke
+  padding: 1.5em
+  border-radius: 5px
+  color: $grayLight
   text-align: center
-  margin-top: 10px
+  font-weight: bold
+  .count
+    display: block
+    font-size: 26px
+    margin-bottom: 5px
 
 ol#question-list
   width: 600px
