--- a/app/views/admin/quizzes/manage_questions.html.haml
+++ b/app/views/admin/quizzes/manage_questions.html.haml
@@ -8,8 +8,8 @@
 #quiz-controls{ data: { behavior: 'stick-to-top'} }
   = admin_button 'Add Multiple Choice Question', '#', id: 'add-multiple-choice-question'
   #question-count
-    Question Count:
-    %span
+    .count
+    Questions
 
 #quiz-questions
   #question-filters
