add loading state button to styleguide

--- a/app/views/styleguide/_buttons.html.haml
+++ b/app/views/styleguide/_buttons.html.haml
@@ -45,3 +45,6 @@
   .span2
     .btn.btn-primary.btn-next
       %i.icon-double-chevron-right
+  .span2
+    .btn.disabled{data: {behavior: 'loadable'} }
+
