add style to results page

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -26,6 +26,7 @@
 @import application/activities/step_by_step
 @import application/activities/quizzes
 @import application/quizzes/overview
+@import application/quizzes/results
 @import application/user_profiles/show
 
 @import application/users/forms
