add dotted horizontal-divider

--- a/app/assets/stylesheets/application/_base.css.sass
+++ b/app/assets/stylesheets/application/_base.css.sass
@@ -62,6 +62,8 @@ ul.horizontal-list
 
 .horizontal-divider
   border-top: 1px solid $grayLight
+  &.dotted
+    border-top: 1px dotted $gray
 
 .icon-double-chevron-left
   @extend .icon-chevron-left
