use dotted horizontal divider

--- a/app/views/quizzes/results.html.haml
+++ b/app/views/quizzes/results.html.haml
@@ -8,8 +8,8 @@
 
 #quiz-results.container
   = render 'quizzes/multiple_choice_question_results'
-  .horizontal-divider
+  .horizontal-divider.dotted
   = render 'quizzes/multiple_choice_question_results'
-  .horizontal-divider
+  .horizontal-divider.dotted
   = render 'quizzes/multiple_choice_question_results'
 
