--- a/app/views/quizzes/_multiple_choice_question_results.html.haml
+++ b/app/views/quizzes/_multiple_choice_question_results.html.haml
@@ -1,9 +1,10 @@
-.row
+.row.multiple-choice-results
   .span6
-    %span 1: Multiple answer question
-    %h3 apparel authentic occaecat, cred Austin post-ironic
-    %ul
-      %li 
+    %span.count 2 <i>of</i> 20
+    %span Multiple answer question
+    %h4 apparel authentic occaecat, cred Austin post-ironic
+    %ol
+      %li
         to-table qui PBR DIY pop-up odio dolore photo booth, magna delectus
       %li
         before they sold out art party ethical fingerstache butcher. Qui
@@ -17,3 +18,4 @@
     .btn b
   .span2
     85%
+
