add labels to styleguides

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -14,6 +14,7 @@
 @import application/carousel
 @import application/subscribe
 @import application/buttons
+@import application/labels
 @import application/images
 @import application/dials
 @import application/home
