--- a/app/assets/stylesheets/styleguide.css.sass
+++ b/app/assets/stylesheets/styleguide.css.sass
@@ -71,6 +71,10 @@
     +styleguide-swatch($blue)
   &.blueDark
     +styleguide-swatch($blueDark)
+  &.green
+    +styleguide-swatch($green)
+  &.red
+    +styleguide-swatch($red)
 
 .styleguide-row-layout
   margin-bottom: 10px
