--- a/app/assets/stylesheets/_bootstrap_config.scss
+++ b/app/assets/stylesheets/_bootstrap_config.scss
@@ -23,13 +23,13 @@ $white:                 #fff;
 // -------------------------
 $blue:                  #049cdb;
 $blueDark:              #0064cd;
-$green:                 #46a546;
+$green:                 #33A534;
 $red:                   #e63742;
 $yellow:                #ffc40d;
 $orange:                #f89406;
 $pink:                  #c3325f;
 $purple:                #7a43b6;
-$brick:                 #aa4311;
+$brick:                 #B23939;
 $brickLight:            #FFBC99;
 $brickDark:             #803B0C;
 
