add responsive support and layout for results page

--- a/app/assets/stylesheets/application/media_queries.css.sass
+++ b/app/assets/stylesheets/application/media_queries.css.sass
@@ -110,6 +110,16 @@
     .dial-wrapper
       margin: 0 0 0 20px
 
+  #quiz-results
+    .results-header
+      display: none
+    span.label
+      display: block
+      left: 0 !important
+    span.column-label
+      display: inline-block !important
+
+
 /* Android phone. Weird inbetween*/
 @media (max-width: 520px)
   .user-form
