--- a/app/views/styleguide/_labels.html.haml
+++ b/app/views/styleguide/_labels.html.haml
@@ -4,14 +4,14 @@
 .row
   .span2
     .label
-      Regular Label
-  .span2
-    .label.label-large.label-green
-      Large Label
-  .span2
-    .label.label-wide.label-red
-      Wide Label
-  .span2
-    .label.label-wide.label-large.label-blue
-      Large Wide Label
+      Default Label
+  .span3
+    .label.label-large.label-success
+      Large Success Label
+  .span3
+    .label.label-wide.label-important
+      Wide Important Label
+  .span3
+    .label.label-wide.label-large.label-info
+      Large Wide Info Label
 
