--- a/app/views/quizzes/_multiple_choice_question_results.html.haml
+++ b/app/views/quizzes/_multiple_choice_question_results.html.haml
@@ -1,21 +1,26 @@
+- is_correct ||= false
+- answer_result = is_correct ? 'correct' : 'wrong'
 .row.multiple-choice-results
   .span6
     %span.count 2 <i>of</i> 20
-    %span Multiple answer question
+    %span.type Multiple answer question
     %h4 apparel authentic occaecat, cred Austin post-ironic
     %ol
       %li
-        to-table qui PBR DIY pop-up odio dolore photo booth, magna delectus
+        to-table qui PBR DIY pop-up odio dolore photo booth
       %li
         before they sold out art party ethical fingerstache butcher. Qui
       %li
         readymade trust fund, brunch bicycle rights mixtape consectetur
       %li
-        deserunt wes anderson leggings tempor marfa. Chambray american
-  .span2
-    .btn.btn-info a
-  .span2
-    .btn b
-  .span2
-    85%
+        deserunt wes anderson leggings tempor marfa.
+  .span2.result-column
+    %span.column-label Your Answer
+    %span.label{ class: answer_result } a
+  .span2.result-column
+    %span.column-label Correct Answer
+    %span.label.default a
+  .span2.result-column
+    %span.column-label Students Avg. Score
+    %p.average 86%
 
