--- a/app/assets/stylesheets/_bootstrap_config.scss
+++ b/app/assets/stylesheets/_bootstrap_config.scss
@@ -24,12 +24,12 @@ $white:                 #fff;
 $blue:                  #049cdb;
 $blueDark:              #0064cd;
 $green:                 #33A534;
-$red:                   #e63742;
+$red:                   #B23939;
 $yellow:                #ffc40d;
 $orange:                #f89406;
 $pink:                  #c3325f;
 $purple:                #7a43b6;
-$brick:                 #B23939;
+$brick:                 #AA420D;
 $brickLight:            #FFBC99;
 $brickDark:             #803B0C;
 
