--- a/app/assets/stylesheets/application/activities/_step_by_step.css.sass
+++ b/app/assets/stylesheets/application/activities/_step_by_step.css.sass
@@ -41,9 +41,11 @@
   li
     margin-top: 0.8em
   p
+    margin-top: 0
+  p, li, > *
     font-weight: normal
     font-size: 16px
     line-height: 18px
-    margin-top: 0
     margin-bottom: 0.8em
+
 
