--- a/app/views/admin/quizzes/_form.html.haml
+++ b/app/views/admin/quizzes/_form.html.haml
@@ -1,4 +1,4 @@
-- submit_options = @quiz.persisted? ? {} : {label: 'Add Questions'}
+- submit_options = @quiz.persisted? ? {} : {label: 'Upload Images'}
 
 = semantic_form_for [:admin, @quiz] do |f|
   = f.inputs name: "Quiz Details" do
@@ -8,7 +8,9 @@
     = f.input :start_copy
     = f.input :end_copy
     - if @quiz.persisted?
-      %li= link_to 'Edit Questions', manage_questions_admin_quiz_path(@quiz), class: 'admin-button'
+      %li
+        = link_to 'Edit Questions', manage_questions_admin_quiz_path(@quiz), class: 'admin-button'
+        = link_to 'Upload Images', upload_images_admin_quiz_path(@quiz), class: 'admin-button'
   = f.actions do
     = f.action :submit, submit_options
     = f.action :cancel, wrapper_html: {class: :cancel}, label: 'Cancel'
