--- a/app/views/layouts/_filepicker.html.erb
+++ b/app/views/layouts/_filepicker.html.erb
@@ -1,14 +1,6 @@
-<!-- Adds the Filepicker.io javascript library to the page -->
-<script src="https://api.filepicker.io/v1/filepicker.js"></script>
+<%= filepicker_js_include_tag %>
+
 <script type="text/javascript">
-//Seting up Filepicker.io with your api key
-filepicker.setKey('<%= FILEPICKER_API_KEY %>');
+  filepicker.setKey('<%= ::Rails.application.config.filepicker_rails.api_key %>');
 </script>
 
-<!-- Use a drag drop widget -->
-<input type="filepicker-dragdrop"/>
-
-<!-- Or how about a save widget -->
-<button data-fp-mimetype="image/png"
-  data-fp-url="http://www.filepicker.io/static/img/success.png">
-  Save File</button>
