add margin margin to images

--- a/app/assets/stylesheets/admin/_quiz_image.css.sass
+++ b/app/assets/stylesheets/admin/_quiz_image.css.sass
@@ -1,5 +1,4 @@
-.quiz-image
-  float: left
-  img
-    width: 150px
-    height: 150px
+#image-uploader
+  .quiz-image
+    margin: 10px
+    float: left
