add "Add Questions" navigation to upload images

--- a/app/views/admin/quizzes/upload_images.html.haml
+++ b/app/views/admin/quizzes/upload_images.html.haml
@@ -10,3 +10,6 @@
   %button.admin-button{ data: {behavior: 'filepicker'}} Pick a File
   #image-list
 
+#quiz-image-actions
+  = link_to 'Add Questions', manage_questions_admin_quiz_path(@quiz), class: 'admin-button'
+
