--- a/app/views/activities/_overview.html.haml
+++ b/app/views/activities/_overview.html.haml
@@ -31,16 +31,16 @@
         - if activity.has_ingredients?
           - activity.ordered_recipes.each do |recipe|
             = render 'ingredients_list', recipe: recipe
-      .span4
+      .span4.right-of-ingredients
         - if activity.yield.present? || activity.timing.present?
           .row
             .span4
               - if activity.yield.present?
                 %h5 Yield
-                %p= activity.yield
+                = activity.yield
               - if activity.timing.present?
                 %h5 Timing
-                %p= activity.timing
+                = activity.timing
         - if activity.required_equipment.present?
           .row
             .span4
