--- a/app/views/activities/show.html.haml
+++ b/app/views/activities/show.html.haml
@@ -8,7 +8,7 @@
 
   = render 'courses/navigation', model: activity, disqus_id: disqus_id
 
-  .hero-unit.hero-well
+  .hero-unit.hero-well.noprint
     .container
       - if activity.youtube_id?
         .row.top-video
