--- a/app/views/layouts/_title_bar.html.haml
+++ b/app/views/layouts/_title_bar.html.haml
@@ -1,5 +1,5 @@
 - unless current_page?('/') or user_signed_in?
-  .container.title-bar
+  .container.title-bar.noprint
     .span12
       = render 'mailing_list/subscribe', orange: true
 
