--- a/app/views/activities/_ingredients_list.html.haml
+++ b/app/views/activities/_ingredients_list.html.haml
@@ -1,14 +1,14 @@
 %table.ingredients
   %colgroup
-    %col{width: "80%"}
-    %col{width: "15%"}
-    %col{width: "5%"}
+    %col{width: "70%"}
+    %col{width: "20%"}
+    %col{width: "10%"}
 
   %thead
     %tr
       %th#ingredient Ingredient
       %th#quantity{colspan: 2}
-        %a#change_units{title: "Click to change units"} Quantity
+        %a.change_units{title: "Click to change units"} Quantity
 
   %tbody
     - recipe.ingredients.each do |ingredient|
