--- a/app/views/activities/_quizzes.html.haml
+++ b/app/views/activities/_quizzes.html.haml
@@ -1,5 +1,5 @@
 - if show_quizzes? and activity.has_quizzes?
-  #quizzes.hero-well
+  #quizzes.hero-well.noprint
     .container
       .row
         .span12
